--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,3 +21,80 @@
 .rodape {
   grid-area: rodape;
 }
+
+.caixa {
+  align-items: flex-end;
+  display: flex;
+  justify-content: center;
+}
+
+.destaques {
+  display: grid;
+  gap: 1.2rem;
+  grid-template-columns: repeat(4, 25%);
+  grid-template-rows: repeat(3, 33.33%);
+  height: calc(100vh - 50px);
+}
+
+.destaques__principal {
+  background: url(/assets/img/fortnite.jpg) center / cover no-repeat;
+  grid-column: 1 / 4;
+  grid-row: 1 / 3;
+}
+
+.destaques__secundario:nth-child(2) {
+  background: url(/assets/img/pubg.jpg) center / cover no-repeat;
+  grid-column: 4;
+  grid-row: 1;
+}
+
+.destaques__secundario:nth-child(3) {
+  background: url(/assets/img/slack.png) center / cover no-repeat;
+  grid-column: 4;
+  grid-row: 2;
+}
+
+.destaques__secundario:nth-child(4) {
+  background: url(/assets/img/whatsapp.png) center / cover no-repeat;
+  grid-column: 4;
+  grid-row: 3;
+}
+
+.destaques__secundario:nth-child(5) {
+  background: url(/assets/img/cs-go.jpg) center / cover no-repeat;
+  grid-column: 3 / 3;
+  grid-row: 3 / 3;
+}
+
+.destaques__titulo {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fdfdfd;
+  padding: 0.6rem;
+  text-align: center;
+  width: 100%;
+}
+
+.destaques__categorias {
+  grid-column: 1 / 3;
+  grid-row: 3 / 3;
+}
+
+.destaques__categorias___lista {
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.destaques__categoria___item {
+  align-items: center;
+  background: #fdfdfd;
+  border-left: 5px solid transparent;
+  padding: 1rem;
+  display: flex;
+  color: #333;
+}
+
+.destaques__categorias___link {
+  color: inherit;
+}
